<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="fragment"
            type="com.example.nuru.view.fragment.login.CheckTypeForGoogleFragment" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragment.login.CheckTypeForGoogleFragment">

        <TextView
            android:id="@+id/txt_selectJob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="45dp"
            android:text="@string/select_job"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ToggleButton
            android:id="@+id/toggle_farmer"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="45dp"
            android:background="@drawable/radius_gray"
            android:text="ToggleButton"
            android:textColor="@color/black"
            android:textOff="@string/farmer"
            android:textOn="농장주 선택됨"
            android:onClick="@{fragment::toggleFarmer}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_selectJob" />

        <ToggleButton
            android:id="@+id/toggle_admin"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="45dp"
            android:background="@drawable/radius_gray"
            android:text="ToggleButton"
            android:textColor="@color/black"
            android:textOff="@string/admin"
            android:textOn="관리자 선택됨"
            android:onClick="@{fragment:: toggleAdmin}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toggle_farmer" />

        <Button
            android:id="@+id/btn_signUpGoogle"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:layout_marginBottom="80dp"
            android:background="@drawable/radius_green"
            android:text="@string/signup"
            android:onClick="@{fragment::btnSignUpGoogle}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar_googleSignUp"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>